--- a/fly.toml
+++ b/fly.toml
@@ -1,36 +1,23 @@
-app = "bleulogix"
-primary_region = "sjc"
+# fly.toml app configuration file generated for bleulogix on 2025-12-15T17:22:26Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'bleulogix'
+primary_region = 'sjc'
 
 [build]
-  builder = "paketobuildpacks"
-  buildpacks = [
-    "gcr.io/paketo-buildpacks/nodejs"
-  ]
-
-[env]
-  NODE_ENV = "production"
-
-[[services]]
-  protocol = "tcp"
-  internal_port = 3000
-  processes = ["app"]
-
-  [[services.ports]]
-    port = 80
-    handlers = ["http"]
-    force_https = true
-
-  [[services.ports]]
-    port = 443
-    handlers = ["tls", "http"]
 
 [http_service]
-  internal_port = 3000
+  internal_port = 80
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
 [[vm]]
-  cpu_kind = "shared"
+  memory = '1gb'
+  cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 512
+  memory_mb = 1024
