--- a/package.json
+++ b/package.json
@@ -3,12 +3,8 @@
   "private": true,
   "type": "module",
   "pkg": {
-    "assets": [
-      "dist/spa/*"
-    ],
-    "scripts": [
-      "dist/server/**/*.js"
-    ]
+    "assets": ["dist/spa/*"],
+    "scripts": ["dist/server/**/*.js"]
   },
   "scripts": {
     "dev": "vite",
@@ -23,19 +19,19 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.0.0",
     "@clerk/express": "^1.5.0",
+    "ajv": "^8.12.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.0",
     "openai": "^4.54.0",
+    "path-to-regexp": "^6.2.1",
     "pg": "^8.11.3",
+    "serverless-http": "^3.2.0",
     "stripe": "^15.10.0",
-    "zod": "^3.25.76",
-    "ajv": "^8.12.0"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/pg": "^8.11.5",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -71,7 +67,9 @@
     "@tanstack/react-query": "^5.84.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^24.2.1",
+    "@types/pg": "^8.11.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@types/three": "^0.176.0",
@@ -96,7 +94,6 @@
     "react-resizable-panels": "^3.0.4",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.12.7",
-    "serverless-http": "^3.2.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
