--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,20 +1,69 @@
 name: Auto-merge PRs when CI passes
 
 on:
-  pull_request:
-    branches: ["main"]
-    types: [opened, reopened, synchronize, ready_for_review]
+  workflow_run:
+    workflows: ["CI"]
+    types:
+      - completed
 
 permissions:
-  contents: write
+  contents: read
   pull-requests: write
 
 jobs:
   enable_auto_merge:
+    name: enable_auto_merge
     runs-on: ubuntu-latest
+    continue-on-error: true
+    if: >
+      github.event.workflow_run.conclusion == 'success' &&
+      github.event.workflow_run.event == 'pull_request'
     steps:
-      - name: Enable auto-merge (squash)
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh pr merge ${{ github.event.pull_request.number }} --auto --squash --delete-branch
+      - name: Enable auto-merge on the PR that triggered CI
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const prs = github.event.workflow_run.pull_requests || [];
+            if (!prs.length) {
+              core.info("No PR associated with this workflow_run. Exiting.");
+              return;
+            }
+
+            const pr = prs[0];
+            core.info(`Enabling auto-merge for PR #${pr.number}`);
+
+            // Requires GitHub GraphQL mutation.
+            // If this fails (permissions, etc.) it will NOT block anything because continue-on-error is true.
+            const query = `
+              query($owner:String!, $repo:String!, $number:Int!) {
+                repository(owner:$owner, name:$repo) {
+                  pullRequest(number:$number) {
+                    id
+                  }
+                }
+              }
+            `;
+
+            const { repository } = await github.graphql(query, {
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              number: pr.number
+            });
+
+            const prId = repository.pullRequest.id;
+
+            const mutation = `
+              mutation($pullRequestId:ID!) {
+                enablePullRequestAutoMerge(input: { pullRequestId: $pullRequestId }) {
+                  pullRequest {
+                    number
+                    autoMergeRequest {
+                      enabledAt
+                    }
+                  }
+                }
+              }
+            `;
+
+            await github.graphql(mutation, { pullRequestId: prId });
+            core.info("Auto-merge enabled (or already enabled).");
